--- a/CV.html
+++ b/CV.html
@@ -153,8 +153,8 @@
     <div id="details">
         <p>
             <span><span id="yearsPost">1</span> years post PhD</span>
-            <span><span>$291k</span> funding | <span>$191k</span> as CIA </span>
-            <span><span>10</span> articles </span>
+            <span><span>$416k</span> funding | <span>$191k</span> as CIA </span>
+            <span><span>12</span> publications </span>
             <span><span>80</span> citations</span>
         </p>
     </div>
@@ -462,6 +462,7 @@
             <div id="GrantsScholarships">Grants & Scholarships</div>
         </div>
         <div class="rightCol">
+
             <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
                 color:black;mso-themecolor:text1;mso-bidi-font-style:italic'>Lanyon, L.,
                 Shiggins, C., <b>Pierce, J. E.</b>, <span class=SpellE>Rademaker</span>, B., <span
@@ -483,7 +484,7 @@
                 J. E.</b>, McPhail, S., Turkington, L., Little, L. (2022). <span
                 class=SpellE>CanCommunicate</span>: Optimising communication for people with
                 brain cancer and their families. Metro South Health Study Education and
-                Research Trust Account (successful).<o:p></o:p></span></p>
+                Research Trust Account ($125,000 – successful).<o:p></o:p></span></p>
                 <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
                 color:black;mso-themecolor:text1;mso-bidi-font-style:italic'><o:p>&nbsp;</o:p></span></p>
                 <p class=MsoNormal><b><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
@@ -589,9 +590,21 @@
                 Melbourne, VIC. ($500 - <b>successful</b>)<o:p></o:p></span></p>
         </div>
         <div class="leftCol">
-            <div id="JournalArticles">Journal Articles</div>
+            <div id="JournalArticles">Peer Reviewed Publications</div>
         </div>
         <div class="rightCol">
+            <p>
+                Adikari, A., Hernandez, N., Alahakoon, D., Rose, M. L., & <b>Pierce, J. E.</b> (2023). From concept to practice: a scoping review of the application of AI to aphasia diagnosis and management. <i>Disability and Rehabilitation</i>, 1-10. <a href="https://doi.org/10.1080/09638288.2023.2199463">https://doi.org/10.1080/09638288.2023.2199463</a>
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <img src="images/altmetrics.png" class="altmetric">
+                        Altmetrics: 14
+                    </td>
+                </tr>
+            </table>
+            <br>
             <p>
                 <b>Pierce, J. E.</b>, O’Halloran, R., Togher, L., Nickels, L., Copland, D., Godecke, E., Meinzer, M., Rai, T., Cadilhac, D. A., Kim, J., Hurley, M., Foster, A., Carragher, M., Steel, G., & Rose, M. L. (2023). Acceptability, feasibility and preliminary efficacy of low-moderate intensity Constraint Induced Aphasia Therapy and Multi-Modality Aphasia Therapy in chronic aphasia after stroke. <i>Topics in Stroke Rehabilitation</i>. <a href="https://doi.org/10.1080/10749357.2023.2196765">https://doi.org/10.1080/10749357.2023.2196765</a>
             </p>
@@ -599,7 +612,7 @@
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
-                        Altmetrics: 2
+                        10
                     </td>
                 </tr>
             </table>
@@ -1751,11 +1764,7 @@
             <div id="StudentSupervision">Student Supervision</div>
         </div>
         <div class="rightCol">
-            <p class=MsoNormal style='margin-bottom:6.0pt;text-align:justify;text-justify:
-            inter-ideograph;tab-stops:83.9pt'><span style='font-size:11.0pt;font-family:
-            "Helvetica Neue Light";mso-fareast-font-family:Calibri;color:black;
-            mso-themecolor:text1;mso-fareast-language:EN-US'>Currently co-supervising two
-            full time PhD candidates (Melbourne).<o:p></o:p></span></p>
+            <p>Currently co-supervising two full time PhD candidates, two honours students, one novice clinician researcher</p>
         </div>
         <div class="leftCol">
             <div id="teaching">Teaching</div>
@@ -1860,15 +1869,9 @@
                   </td>
                   <td valign=top style='padding:0cm 5.4pt 0cm 0cm;
                   height:34.45pt'>
-                  <p class=MsoNormal><span style='font-size:10.0pt'><a
-                  href="http://www.twitter.com/JohnPierce85"><span style='font-size:11.0pt;
-                  font-family:"Helvetica Neue Light";mso-fareast-font-family:Calibri;
-                  mso-fareast-language:EN-US'>Twitter handle</span></a></span><span
-                  style='font-size:11.0pt;font-family:"Helvetica Neue Light";mso-fareast-font-family:
-                  Calibri;color:#82BAA4;mso-fareast-language:EN-US'><o:p></o:p></span></p>
-                  <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
-                  mso-fareast-font-family:Calibri;color:black;mso-themecolor:text1;
-                  mso-fareast-language:EN-US'>1,970 followers<o:p></o:p></span></p>
+                  <p><a
+                  href="http://www.twitter.com/JohnPierce85">Twitter handle</a></p>
+                  <p>2,010 followers</p>
                   </td>
                  </tr>
                  <tr style='mso-yfti-irow:1;height:34.6pt'>
@@ -1882,17 +1885,9 @@
                   </td>
                   <td valign=top style='padding:0cm 5.4pt 0cm 0cm;
                   height:34.6pt'>
-                  <p class=MsoNormal><span style='font-size:10.0pt'><a
-                  href="https://www.youtube.com/channel/UCtigAXfJSqqiDUhNlohcVcA/featured"><span
-                  style='font-size:11.0pt;font-family:"Helvetica Neue Light";mso-fareast-font-family:
-                  Calibri;mso-fareast-language:EN-US'>YouTube Channel</span></a></span><span
-                  class=MsoHyperlink><span style='font-size:11.0pt;mso-fareast-font-family:
-                  Calibri;mso-fareast-language:EN-US'> (tutorials)</span></span><u><span
-                  style='font-size:11.0pt;font-family:"Helvetica Neue Light";mso-fareast-font-family:
-                  Calibri;color:#82BAA4;mso-fareast-language:EN-US'><o:p></o:p></span></u></p>
-                  <p class=MsoNormal><span style='font-size:11.0pt;font-family:"Helvetica Neue Light";
-                  mso-fareast-font-family:Calibri;color:black;mso-themecolor:text1;
-                  mso-fareast-language:EN-US'>2050 subscribers<o:p></o:p></span></p>
+                  <p><a
+                  href="https://www.youtube.com/channel/UCtigAXfJSqqiDUhNlohcVcA/featured">YouTube Channel</a> (tutorials)</p>
+                  <p>2,510 subscribers</p>
                   </td>
                  </tr>
                  <tr style='mso-yfti-irow:2;mso-yfti-lastrow:yes;height:34.6pt'>
