--- a/CV.html
+++ b/CV.html
@@ -348,13 +348,25 @@
         <div class="rightCol JournalArticles">
             <div class="rightColMask"></div>
             <p>
+                Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology</i>, 0(0), 1–12. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
+            </p>
+            <table>
+                <tr>
+                    <td>
+                        <img src="images/altmetrics.png" class="altmetric">
+                        Altmetrics: 7
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <p>
                 Adikari, A., Hernandez, N., Alahakoon, D., Rose, M. L., & <b>Pierce, J. E.</b> (2023). From concept to practice: a scoping review of the application of AI to aphasia diagnosis and management. <i>Disability and Rehabilitation</i>, 1-10. <a href="https://doi.org/10.1080/09638288.2023.2199463">https://doi.org/10.1080/09638288.2023.2199463</a>
             </p>
             <table>
                 <tr>
                     <td>
                         <img src="images/altmetrics.png" class="altmetric">
-                        Altmetrics: 14
+                        14
                     </td>
                 </tr>
             </table>
@@ -1133,6 +1145,7 @@
         </div>
         <div class="rightCol" id="teaching">
             <div class="rightColMask"></div>
+                <p><span>Marking - Marking of final year thesis for National University of Singapore (by invitation)</span></p>
                 <p ><span>Aphasia intervention (2022).
                 Class delivered to PhD neuropsychology students by invitation, Monash
                 University.</span></p>
