--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
             stitchTiles='stitch'/>
         </filter>
       </svg>
-    
-<!-- Profile -->
-    <div class="profileContainer">
-        <img alt="Profile photograph of John Pierce" src="images/profile.jpg" id="profileimg"/>
-    </div>
 <!-- External links -->
     <div class="externalLinks">
         <a href="http://www.twitter.com/johnpierce85" id="twitter" target="_blank">
@@ -162,7 +157,12 @@
                 </svg>
             <div class="externalLinkLabel">email me</div>
         </a>
+    </div>    
+<!-- Profile -->
+    <div class="profileContainer">
+        <img alt="Profile photograph of John Pierce" src="images/profile.jpg" id="profileimg"/>
     </div>
+
 <!-- Bio paragraph -->
     <div class="bioParagraph">
         <p>I'm Dr <b>John Pierce</b>, a speech pathologist and researcher. I work on research, tools for speech pathologists, and technology to make life better for people with aphasia.</p>
@@ -201,6 +201,36 @@
                 </div>
             </a>
         </div> -->
+        <div class="Publications aphasia technology artificial_intelligence">
+            <a href="https://www.tandfonline.com/doi/epdf/10.1080/09638288.2023.2199463" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/AIdoughnut.jpg" alt="" style="width: 110%;margin-top: -1.2rem;"/>
+                </div>
+                <div class="cardLower">
+                    Artificial Intelligence + Aphasia<br>[scoping review]
+                </div>
+            </a>
+        </div>
+        <div class="Publications aphasia aphasia aphasia-friendly_videos video_abstracts">
+            <a href="https://doi.org/10.1080/02687038.2023.2229030" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/videoabstractinfographic.jpg" alt="" style="width: 100%;margin-top: -20rem;rotate: 45deg;"/>
+                </div>
+                <div class="cardLower">
+                    Preferences of people w aphasia for video abstracts
+                </div>
+            </a>
+        </div>
+        <div class="Project_and_tools aphasia technology">
+            <a href="https://rbcavanaugh.github.io/aphasia-tech-map/" target="_blank">
+                <div class="cardUpper" >
+                    <img src="images/techmap.png" alt="" style="width: 100%;"/>
+                </div>
+                <div class="cardLower">
+                    Map of technology projects for aphasia
+                </div>
+            </a>
+        </div>
         <div class="Publications aphasia multi-modal_aphasia_therapy constraint-induced_aphasia_therapy">
             <a href="https://doi.org/10.1080/10749357.2023.2196765" target="_blank">
                 <div class="cardUpper" >
