--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </div>
                 <div class="cardLower">
                     Pilot study of lower intensity treatments
-                    <span>Distributing 30h of <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> & <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> over 5 weeks</span>
+                    <span>Distributing 30 hours of <span style="color: #60ae46;">Constraint Induced Aphasia Therapy</span> & <span style="color:#2491b0;">Multi-Modal Aphasia Therapy</span> over 5 weeks</span>
                 </div>
             </a>
         </div>
