Fixed page width error

--- a/CV.html
+++ b/CV.html
@@ -122,7 +122,9 @@
             </div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><b><span>Doctor of Philosophy</span></b></p>
                 <p><span>La Trobe University Aug
                 2021</span></p>
@@ -153,7 +155,9 @@
             <div id="ProfessionalExperience">Professional Experience</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><span><b
                ><span>Post Doctoral</span></b></span><b><span> Research Fellow – Centre of Research
                 Excellence in Aphasia Recovery and Rehabilitation</span></b></p>
@@ -214,7 +218,9 @@
             <div id="Awards">Awards</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p>Collaboration of Aphasia Trialists Resources and Recruitment Award - CATS 10 year anniversary awards 2023.</p>
             <p><span>&nbsp;</span></p>
             <p><span><span>Tavistock</span></span><span> Trust for Aphasia Student Prize - La Trobe
@@ -226,7 +232,9 @@
             Current Projects
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><i><span >Aphasia Therapy Online – Vietnamese,
                 Mandarin, Greek</span></i></p>
                 <p><i><span >&nbsp;</span></i></p>
@@ -267,7 +275,9 @@
             <div id="GrantsScholarships">Grants & Scholarships</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
 
             <p><span>Lanyon, L.,
                 Shiggins, C., <b>Pierce, J. E.</b>, <span>Rademaker</span>, B., <span>Sayner</span>, A., Ermert, M., Ermert, K., Pettigrove, K., Rose,
@@ -344,7 +354,9 @@
             <div id="JournalArticles">Peer Reviewed Publications</div>
         </div>
         <div class="rightCol JournalArticles">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p>
                 Finch, E., <b>Pierce, J. E.</b>, Pais, A. M., Dow-Richards, C., Reed, A., Charalambous, M., Matos, M. A., Wallace, S. J., & Breitenstein, C. (2023). Preferences of people with post-stroke aphasia for aphasia research videos: An international project. <i>Aphasiology</i>, 0(0), 1–12. <a href="https://doi.org/10.1080/02687038.2023.2229030">https://doi.org/10.1080/02687038.2023.2229030</a>
             </p>
@@ -687,7 +699,9 @@
             <div id="BookChapters">Book Chapters</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><span >Rose, M. L., <b>Pierce, J. E.</b> &amp;
                 Harvey, S. (2022). Single-Case Experimental Designs in Health Research. In P.
                 Liamputtong (Ed.), <i>Research Methods in Health - Foundations for
@@ -702,7 +716,9 @@
             <div id="Presentations">Presentations</div> 
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><b><span >Pierce,
                 J. E.</span></b><span >,
                 Adikari, A., Hernandez, N., <span>Pallewala</span>, N.,
@@ -923,7 +939,9 @@
             <div id="Posters">Conference Posters</div>
         </div>
         <div class="rightCol" id="posters">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <table style="width: 100%;">
             <tr>
                 <td width=397 valign=top>
@@ -1121,7 +1139,9 @@
             <div id="Memberships">Memberships</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><span>Collaboration of Aphasia
             Trialists, Workgroup 4</span></p>
             <p><span>Collaboration of Aphasia
@@ -1135,14 +1155,18 @@
             <div id="StudentSupervision">Student Supervision</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p>Currently co-supervising two full time PhD candidates, two honours students, one novice clinician researcher</p>
         </div>
         <div class="leftCol">
             <div id="teaching">Teaching</div>
         </div>
         <div class="rightCol" id="teaching">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
                 <p><span>Marking - Marking of final year thesis for National University of Singapore (by invitation)</span></p>
                 <p ><span>Aphasia intervention (2022).
                 Class delivered to PhD neuropsychology students by invitation, Monash
@@ -1186,7 +1210,9 @@
             <div id="certifications">Certifications</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><span >Lee Silverman
                 Voice Treatment – certified clinician.</span></p>
                 <p><span >Clinical
@@ -1196,7 +1222,9 @@
             <div id="researchimpactheader">Research Impact</div>
         </div>
         <div class="rightCol" id="researchImpact">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p><span >Two papers in ASHA evidence map for aphasia</span></p>
                 <table>
                  <tr>
@@ -1244,7 +1272,9 @@
             <div id="service">Service</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <p>Organising committee member for the Aphasiology Symposium of Australasia, Nov 2023.</p>
             <p><span>Set up </span><span><a
             href="https://rbcavanaugh.github.io/aphasia-tech-map/"><span
@@ -1331,7 +1361,9 @@
             <div id="collaboration">Collaboration (Published papers)</div>
         </div>
         <div class="rightCol">
-            <div class="rightColMask"></div>
+            <div class="rightColMask-container">
+                <div class="rightColMask"></div>
+            </div>
             <img src="images/world.svg" />
             <img src="images/national.svg" />
         </div>
